# data_pipeline

./: .gitignore  README.md  pyproject.toml  setup.py  workspace.yml
dagster_home/: dagster.yaml
dagster_home/.logs_queue/: .fuse_hidden0000ad520000004f
dagster_home/.telemetry/: id.yaml
data_pipeline/: __init__.py  assets.py  resources.py  test.py  utils.py
data_pipeline/assets/: __init__.py  downloader.py  fundamentals.py  scores.py  security_profiles.py  stock_listing.py
data_pipeline/fixtures/: NYSE_and_NYSE_MKT_Trading_Units_Daily_File.xls  nasdaq_screener_1718944810995.csv
data_pipeline/portfolio_optimizer/: definitions.py  utils.py
data_pipeline/portfolio_optimizer/assets/: downloader.py  forecast_returns.py  forecast_returns_dev.py  fundamentals.py  optimization.py  prices.py  scores.py  security_profiles.py  stock_listing.py
data_pipeline/portfolio_optimizer/resources/: configs.py  dbconn.py  dbtools.py  models.py
data_pipeline/resources/: configs.py  dbconn.py  dbtools.py  models.py
portfolio_optimizer_old/: models.py  views.py
portfolio_optimizer_old/optimizer/: utils.py
