[project]
name = "data-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "connectorx>=0.4.1",
    "dagster>=1.9.10",
    "dagster-webserver>=1.9.10",
    "pandera[polars]>=0.22.1",
    "plotly>=5.24.1",
    "polars>=1.21.0",
    "pyportfolioopt>=1.5.6",
    "ruff>=0.9.3",
    "statsmodels>=0.14.4",
    "yahooquery>=2.3.7",
]

[tool.ruff.lint]
select = ["I", "E", "F", "W", "PL", "N", "RUF"]

[tool.ruff]
line-length = 100

[tool.dagster]
module_name = "data_pipeline"
